--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	runtimeOnly 'com.h2database:h2'
 
+	implementation 'org.springframework.retry:spring-retry:1.3.1'
+	implementation 'org.springframework:spring-aspects:5.3.5'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 	// https://mvnrepository.com/artifact/org.mockito/mockito-core
